# glc_pc

./: README.md
src/: CMakeLists.txt  application.cpp  application.h  const_and_struct.cpp  const_and_struct.h  libre_client.cpp  libre_client.h  main.cpp  qrc.qrc  setting_widget.cpp  setting_widget.h  widget.cpp  widget.h
